# RA1-10

./: CMakeLists.txt  README.md
src/: fsm_scanner.cpp  main.cpp  rpn_evaluator.cpp
tests/: teste1.txt  teste1_output.txt  teste2.txt  teste2_output.txt  teste3.txt  teste3_output.txt
